Changed /login endpoint to /user endpoint (cleaning up the API)
