# openapi.yaml
@@ -2,7 +2,7 @@ openapi: 3.0.0
 info:
   title: Calgary Fit Friends
   description: Create pop-up activities and invite family & friends.
-  version: "1.2"
+  version: "1.3"
 
 servers:
   - url: http://localhost:4201
@@ -21,7 +21,7 @@ paths:
               schema:
                 type: string
 
-  /login:
+  /user:
     get:
       summary: Log a user in
       description: Log a user in.
@@ -42,6 +42,7 @@ paths:
         "200":
           description: User logged in.
           content:
+            text/html:
               schema:
                 $ref: "#/components/schemas/UserInfo"
         "404":
@@ -51,7 +52,6 @@ paths:
               schema:
                 $ref: "#/components/schemas/ServerMessage"
 
-  /user:
     post:
       summary: Add a new user.
       description: Add a new user to the system.
